Closed Bug 1731293 Opened 3 years ago Closed 3 years ago

Intermittent [tier 2] Assertion failure: IsCurrentThreadRunningWorker(), at /builds/worker/checkouts/gecko/dom/performance/PerformanceStorageWorker.cpp:130

Categories

(Core :: Performance, defect, P5)

defect

Tracking

()

RESOLVED FIXED
94 Branch
Tracking Status
firefox-esr78 --- unaffected
firefox-esr91 --- unaffected
firefox92 --- unaffected
firefox93 --- unaffected
firefox94 --- fixed

People

(Reporter: intermittent-bug-filer, Assigned: smaug)

References

(Regression)

Details

(Keywords: assertion, intermittent-failure, regression)

Attachments

(1 file)

Filed by: ctuns [at] mozilla.com
Parsed log: https://treeherder.mozilla.org/logviewer?job_id=351877524&repo=autoland
Full log: https://firefox-ci-tc.services.mozilla.com/api/queue/v1/task/A0ZhjCTOQHiaPzKJGHCGfA/runs/0/artifacts/public/logs/live_backing.log


[task 2021-09-17T12:41:54.994Z] 12:41:54     INFO - TEST-OK | toolkit/components/reader/test/browser_readerMode_remoteType.js | took 1697ms
[task 2021-09-17T12:41:55.000Z] 12:41:55     INFO - GECKO(4846) | [Child 4850: Main Thread]: I/DocShellAndDOMWindowLeak ++DOCSHELL 103c07400 == 1 [pid = 4850] [id = 6]
[task 2021-09-17T12:41:55.001Z] 12:41:55     INFO - GECKO(4846) | [Child 4850: Main Thread]: I/DocShellAndDOMWindowLeak ++DOMWINDOW == 3 (1039bec80) [pid = 4850] [serial = 15] [outer = 0]
[task 2021-09-17T12:41:55.002Z] 12:41:55     INFO - GECKO(4846) | [Child 4850: Main Thread]: I/DocShellAndDOMWindowLeak ++DOMWINDOW == 4 (103c08c00) [pid = 4850] [serial = 16] [outer = 1039bec80]
[task 2021-09-17T12:41:55.007Z] 12:41:55     INFO - GECKO(4846) | [Child 4902, DOM Worker] WARNING: '!BackgroundChild::GetOrCreateForCurrentThread()', file /builds/worker/checkouts/gecko/dom/workers/RuntimeService.cpp:2213
[task 2021-09-17T12:41:55.007Z] 12:41:55     INFO - GECKO(4846) | Assertion failure: IsCurrentThreadRunningWorker(), at /builds/worker/checkouts/gecko/dom/performance/PerformanceStorageWorker.cpp:130
[task 2021-09-17T12:41:55.010Z] 12:41:55     INFO - GECKO(4846) | #01: mozilla::dom::PerformanceStorageWorker::ShutdownOnWorker() [dom/performance/PerformanceStorageWorker.cpp:130]
[task 2021-09-17T12:41:55.011Z] 12:41:55     INFO - GECKO(4846) | #02: mozilla::dom::WorkerRef::Notify() [dom/workers/WorkerRef.cpp:99]
[task 2021-09-17T12:41:55.011Z] 12:41:55     INFO - GECKO(4846) | #03: mozilla::dom::WeakWorkerRef::Notify() [dom/workers/WorkerRef.cpp:134]
[task 2021-09-17T12:41:55.012Z] 12:41:55     INFO - GECKO(4846) | #04: mozilla::dom::WorkerPrivate::NotifyWorkerRefs(mozilla::dom::WorkerStatus) [dom/workers/WorkerPrivate.cpp:3865]
[task 2021-09-17T12:41:55.013Z] 12:41:55     INFO - GECKO(4846) | #05: mozilla::dom::WorkerPrivate::RunLoopNeverRan() [dom/workers/WorkerPrivate.cpp:2920]
[task 2021-09-17T12:41:55.014Z] 12:41:55     INFO - GECKO(4846) | #06: mozilla::dom::workerinternals::(anonymous namespace)::WorkerThreadPrimaryRunnable::Run() [dom/workers/RuntimeService.cpp:2273]
[task 2021-09-17T12:41:55.014Z] 12:41:55     INFO - GECKO(4846) | #07: nsThread::ProcessNextEvent(bool, bool*) [xpcom/threads/nsThread.cpp:1142]
[task 2021-09-17T12:41:55.015Z] 12:41:55     INFO - GECKO(4846) | #08: NS_ProcessNextEvent(nsIThread*, bool) [xpcom/threads/nsThreadUtils.cpp:466]
[task 2021-09-17T12:41:55.016Z] 12:41:55     INFO - GECKO(4846) | #09: mozilla::ipc::MessagePumpForNonMainThreads::Run(base::MessagePump::Delegate*) [ipc/glue/MessagePump.cpp:301]
[task 2021-09-17T12:41:55.016Z] 12:41:55     INFO - GECKO(4846) | #10: MessageLoop::Run() [ipc/chromium/src/base/message_loop.cc:307]
[task 2021-09-17T12:41:55.017Z] 12:41:55     INFO - GECKO(4846) | #11: nsThread::ThreadFunc(void*) [xpcom/threads/nsThread.cpp:392]
[task 2021-09-17T12:41:55.244Z] 12:41:55     INFO - GECKO(4846) | #12: _pt_root [nsprpub/pr/src/pthreads/ptthread.c:204]
<...>
[task 2021-09-17T12:42:00.119Z] 12:42:00     INFO - GECKO(4846) | [Parent 4846: Main Thread]: I/DocShellAndDOMWindowLeak --DOMWINDOW == 10 (126f63000) [pid = 4846] [serial = 11] [outer = 0] [url = about:blank]
[task 2021-09-17T12:42:00.586Z] 12:42:00     INFO - GECKO(4846) | Completed ShutdownLeaks collections in process 4846
[task 2021-09-17T12:42:00.586Z] 12:42:00     INFO - TEST-START | Shutdown
Has Regression Range: --- → yes

I'm good with regressions.
But in this case I think we should just change the assertion to check !NS_IsMainThread()

Assignee: nobody → bugs
Flags: needinfo?(bugs)
Pushed by opettay@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/18b4c9b06a8a
change the assertion to check only that we aren't on the main thread since the worker thread isn't really running, r=asuth
Status: NEW → RESOLVED
Closed: 3 years ago
Resolution: --- → FIXED
Target Milestone: --- → 94 Branch
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: