Bug 1731293, change the assertion to check only that we aren't on the main thread since the worker thread isn't really running, r=asuth

Differential Revision: https://phabricator.services.mozilla.com/D125999